# semperflies-website

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh  espx-ls.toml
certifications/: 7546d151135f007a.pem  key.pem
migrations/: 20240725224934_init.down.sql  20240725224934_init.up.sql
public/fonts/Tattoo/: info.txt
public/styles/: admin_upload.css  carousel.css  dedications.css  footer.css  global.css  header.css  landing.css  navbar.css  patrol_gear.css  patrol_log.css  patrol_logs.css  support.css  transitions.css
src/: cert.rs  error.rs  main.rs  state.rs  util.rs
src/auth/: error.rs  handlers.rs  middleware.rs  mod.rs  model.rs
src/auth/handlers/: delete.rs  error.rs  mod.rs  upload.rs
src/components/: carousel.rs
src/database/: handles.rs  models.rs
src/routes/: index.rs  middlware.rs  mod.rs
src/routes/pages/: about_us.rs  admin.rs  debriefs.rs  dedications.rs  fallen_brothers.rs  landing.rs  mod.rs  patrol_gear.rs  support.rs  util.rs  videos.rs
templates/: 404.html  index.html  layout.html
templates/admin/: login_logout.html  upload.html
templates/admin/forms/: debriefs.html  dedications.html  fallen_brothers.html  images.html  patrol_log.html  patrol_logs.html  support.html
templates/components/: carousel.html  delete.html  footer.html  header.html  single_patrol_log.html
templates/pages/: about_us.html  debriefs.html  dedications.html  fallen_brothers.html  gear_images.html  landing.html  login_logout.html  patrol_gear.html  patrol_log.html  patrol_logs.html  store.html  support.html  videos.html
(+10 files in other folders)
